# yasr

./: AUTHORS  BUGS  CREDITS  ChangeLog  Makefile.am  NEWS  README  README-br  README-de  README-es  README-fr  README-pl  README-ru  TODO  aclocal.m4  config.h.in  configure.in  meson.build  yasr.conf
acclogin/: Makefile.am  Makefile.in  acclogin.1  acclogin.c  meson.build
contrib/: README  yasr.conf
m4/: Makefile.am
po/: ChangeLog  Makevars  POTFILES.in  es.po  fr.po  yasr.pot
tools/: keytest.c  meson.build
yasr/: Makefile.am  Makefile.in  cfmakeraw.c  config.c  debug.c  forkpty.c  getfn.c  gettext.h  keybind.c  keytest.c  login_tty.c  main.c  meson.build  openpty.c  option.c  term.h  tts.c  tts.h  ui.c  yasr.1  yasr.conf  yasr.h
